<resources>
    <string name="app_name">Messenger</string>
    <string name="text_app_name">Messenger</string>
    <string name="default_client_name">Your Name</string>
    <string name="nav_text_contacts">Contacts</string>
    <string name="nav_text_chats">Chats</string>
    <string name="nav_text_trash">Trash</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_logout">Log Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="enter_phone_text_toolbar">Setting Messenger</string>
    <string name="hint_input_phone_number">Phone number</string>
    <string name="text2_setting_phone">Please confirm your country code and enter your phone number</string>
    <string name="text_button_setting_phone">Continue</string>
    <string name="text1_setting_phone">Your phone number</string>
    <string name="toolbar_text_enter_phone">Setting Messenger</string>

</resources>
