<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3f4a68">


    <ImageView
        android:id="@+id/nav_id_icon_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/contacts_icon"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35sp"/>

    <ImageView
        android:id="@+id/nav_id_icon_chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/chat_icon"

        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35sp"
        android:layout_below="@id/nav_id_icon_contacts"
        android:layout_marginTop="55sp"/>

    <ImageView
        android:id="@+id/nav_id_icon_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/trash_icon"

        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35sp"
        android:layout_below="@id/nav_id_icon_chats"
        android:layout_marginTop="50sp"/>

    <ImageView
        android:id="@+id/nav_id_icon_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/settings_icon"

        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35sp"
        android:layout_above="@id/nav_id_icon_logout"
        android:layout_marginBottom="49sp"/>

    <ImageView
        android:id="@+id/nav_id_icon_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logout_icon"

        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="35sp"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="5sp"/>

    <TextView
        android:id="@+id/nav_id_text_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_text_contacts"
        android:textSize="25sp"
        android:textColor="#80ffffff"

        android:layout_alignBottom="@+id/nav_id_icon_contacts"
        android:layout_alignLeft="@+id/nav_id_text_chats" />


    <TextView
        android:id="@+id/nav_id_text_chats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_text_chats"
        android:textSize="25sp"
        android:textColor="#80ffffff"

        android:layout_above="@+id/nav_id_icon_trash"
        android:layout_alignLeft="@+id/nav_id_text_trash" />

    <TextView
        android:id="@+id/nav_id_text_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_text_trash"
        android:textSize="25sp"
        android:textColor="#80ffffff"

        android:layout_alignBottom="@+id/nav_id_icon_trash"
        android:layout_alignLeft="@+id/nav_id_text_settings" />

    <TextView
        android:id="@+id/nav_id_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_text_settings"
        android:textSize="25sp"
        android:textColor="#80ffffff"

        android:layout_alignBottom="@+id/nav_id_icon_settings"
        android:layout_toRightOf="@+id/nav_id_icon_logout" />

    <TextView
        android:id="@+id/nav_id_text_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_text_logout"
        android:textSize="25sp"
        android:textColor="#80ffffff"

        android:layout_alignTop="@+id/nav_id_icon_logout"
        android:layout_toRightOf="@+id/nav_id_icon_logout"/>


</RelativeLayout>
